[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "A CLI for basic geological calculations any field geologist would need"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version =  "4.1.4", features = ["derive"]}
csv = "1.1.6"
core = {path="../core"}