[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "A library for doing geological calculations any field geologist would need"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.1"
serde = { version = "1.0.152", features = ["derive"] }